[package]
name = "mod_expand"
description = "Macro to expand a module namespace over an expression"

authors = ["Jan Růžička <jan.ruzicka01@gmail.com>"]

keywords = ["macro", "expand", "name", "module"]

version = "0.1.0"
edition = "2018"

license = "MIT"
readme = "README.md"

repository = "https://github.com/ruza-net/mod_expand"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
